# libscarabeus

./: README.md  meson.build  scarabeus.doap
src/: corrupt-file.vala  meson.build  scanner.vala
